[package]
name = "cliconf"
version = "0.1.2"
edition = "2021"
description = "Dead-simple configuration for Rust CLI tools."
repository = "https://github.com/computerdane/cliconf"
license-file = "LICENSE"
exclude = [".envrc", "flake*"]

[dependencies]
dirs = "6.0.0"
regex = "1.11.1"
serde_json = "1.0.140"
