[package]
name = "cliconf"
version = "0.3.0"
edition = "2021"
description = "Dead-simple configuration for Rust CLI tools."
repository = "https://github.com/computerdane/cliconf"
license = "MIT"
exclude = [".envrc", "flake*"]

[dependencies]
quote = "1.0.40"
syn = "2.0.100"

[dev-dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

[lib]
proc-macro = true
